--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,14 @@
 repos:
 -   repo: local
     hooks:
+    - id: black
+      name: black
+      entry: python3 -m black . -l79
+      language: system
+      stages: [commit]
+      types: [python]
+-   repo: local
+    hooks:
       - id: pydocstyle
         name: pydocstyle
         entry: pydocstyle
@@ -23,3 +31,11 @@ repos:
       always_run: true
       pass_filenames: false
       stages: [commit]
+-   repo: local
+    hooks:
+      - id: requirements
+        name: requirements
+        entry: bash -c 'python3 -m pip freeze > requirements.txt; git add requirements.txt'
+        language: system
+        pass_filenames: false
+        stages: [commit]
